--- a/scss/_intro.scss
+++ b/scss/_intro.scss
@@ -35,9 +35,10 @@
 
   &__container {
     position: relative;
-    width: 336px;
-    height: 336px;
+    width: 33.6rem;
+    height: 33.6rem;
     z-index: -1;
+    margin-right: 3rem;
     // border-radius: 100%;
     grid-area: img;
     justify-self: center;
@@ -49,6 +50,7 @@
 
     @media only screen and (max-width: $bp-xsmall) {
       margin-bottom: 2rem;
+      margin-right: 0;
     }
 
     img {
@@ -64,9 +66,13 @@
       top: -40px;
       left: -40px;
       z-index: -1;
-      width: 336px;
-      height: 336px;
+      width: 33.6rem;
+      height: 33.6rem;
       grid-area: img;
+
+      @media screen and (max-width: $bp-xsmall) {
+        display: none;
+      }
     }
   }
 
@@ -102,6 +108,10 @@
   &__jobtitle {
     grid-area: title;
     align-self: end;
+
+    @media only screen and (max-width: $bp-xsmall) {
+      font-size: 2.5rem;
+    }
   }
 
   &__description {
@@ -112,7 +122,6 @@
     }
   }
 
-  &__jobtitle,
   &__description {
     font-size: 1.8rem;
   }
