--- a/scss/_navigation-mobile.scss
+++ b/scss/_navigation-mobile.scss
@@ -20,7 +20,7 @@
       display: none;
       position: fixed;
       top: 1rem;
-      right: 7rem;
+      right: 5%;
     }
 
     &--button {
@@ -28,7 +28,7 @@
       width: 5rem;
       position: fixed;
       top: 1rem;
-      right: 5rem;
+      right: 5%;
       z-index: 2000;
       // box-shadow: 0 1rem 3rem rgba(#000, 0.1);
       text-align: center;
